chore: resilient Render build (ci -> install fallback)

--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
-﻿services:
+services:
   - type: web
     name: seantechdesk-web
     env: node
     plan: free
     buildCommand: |
-      npm ci --prefix client
+      (npm ci --prefix client) || (npm install --prefix client)
       npm run build --prefix client
-      npm ci --prefix server
+      (npm ci --prefix server) || (npm install --prefix server)
       cd server && npx prisma migrate deploy
     startCommand: node server/server.js
     autoDeploy: true
